adding some stuff to fix bertmap stuff